2011-05-06  Francis Lachapelle  <flachapelle@inverse.ca>

	* bin/spamity_mail_report: fixed select statement to properly
	respect the date of the last report.

2011-04-27  Francis Lachapelle  <flachapelle@inverse.ca>

	* cgi-bin/external.cgi (disablereport): new action to quickly
	disable email reports.

	* bin/spamity_mail_report: added support for Oracle.
	No longer report messages that are not quarantined.
	No longer send a report if there's no quarantined messages.

	* lib/Spamity/Web.pm (getMessagesByDate): added a new argument,
	is_quarantined, to return only messages that have been quarantined.

	* cgi-bin/prefs.cgi: it's no longer required to enable amavisd-new
	policies to show this page; the Spamity preferences are enough.

2011-02-18  Francis Lachapelle  <flachapelle@inverse.ca>

	* lib/Spamity/Database/oracle.pm (getUnixTime): we now use the
	database timezone instead of the static EDT timezone.

2010-06-08  Francis Lachapelle  <flachapelle@inverse.ca>

	* lib/Spamity/Web.pm (formatMessage): fixed proper translation of
	month.
	(getGraphByCount): switched to UTF-8 for the graph title.

	* lib/Spamity/Preference/amavisdnew.pm (getPolicy): fixed a bug
	when an address is associated to a dummy policy (id = 0).

	* cgi-bin/prefs.cgi: added support for spamity-specific
	preferences which currently contain the option to receive a
	quarantine report by email.

	* cgi-bin/*.cgi: switched to UTF-8.

2010-04-01  Francis Lachapelle  <flachapelle@inverse.ca>

	* lib/Spamity/Preference/amavisdnew/pgsql.pm (_setList): fixed
	delete statement that would take too much time to execute.

2007-10-29 Francis Lachapelle <francis@Sophos.ca>

	* Improved parsing for check_sender_access maps.

2007-10-15 Francis Lachapelle <francis@Sophos.ca>

	* Added calls to finish on statement handles for
	scripts/sessions_maintenance_sql.pl.

2007-08-07 Francis Lachapelle <francis@Sophos.ca>

	* Improved error handling of scripts/sessions_maintenance_sql.pl.
