@@ -1,3 +1,12 @@
+2011-05-16  Francis Lachapelle  <flachapelle@inverse.ca>
+
+	* bin/spamity_mail_report: update the preferences of all users
+	even if no report was sent for the user. Also force weekly reports
+	to be sent on Sundays (only for Oracle sources for the moment).
+
+	* cgi-bin/external.cgi: quote non-word character in URL so the
+	encoded request is properly recognized.
+
 2011-05-06  Francis Lachapelle  <flachapelle@inverse.ca>
 
 	* bin/spamity_mail_report: fixed select statement to properly
